@@ -862,9 +862,16 @@ show_usage(void)
            "      --bg-tile FILE\n"
            "      --bg-center FILE\n"
            "      --bg-scale FILE\n"
-           "      --bg-seamless FILE    Set your desktop background to FILE\n"
-           "                            can use enlightenment IPC if you are running\n"
-           "                            it, or will fall back to X methods.\n"
+           "      --bg-seamless FILE    Set your desktop background to FILE. Feh can\n"
+           "                            use enlightenment IPC if you are running it,\n"
+           "                            or will fall back to X methods.\n"
+           "                            Feh stores the commandline necessary to restore\n"
+           "                            the background you chose in ~/.fehbg. So to have\n"
+           "                            feh-set backgrounds restored when you restart X,\n"
+           "                            add the line \"eval `cat $HOME/.fehbg`\" to your\n"
+           "                            X startup script (e.g. ~/.xsession). Note that\n"
+           "                            you only need to do this for non E window\n"
+           "                            managers.\n"
            "      --fontpath PATH       Specify an extra directory to look in for fonts,\n"
            "                            can be used multiple times to add multiple paths.\n"
            "  -M, --menu-font FONT      Use FONT for the font in menus.\n"
